deployment2.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ghee
  labels:
    first: app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
        - name: ghee-container
          image: suyashrokade78/ghee:v1.0.0
          ports:
            - containerPort: 5656

---

apiVersion: v1
kind: Service

metadata:
  name: ghee-service

spec:
  type: LoadBalancer

  selector:
    app: web

  ports:
    - protocol: TCP
      port: 5656
      targetPort: 5656
