http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: suyash-http-route
  namespace: suyash-ns
spec:
  parentRefs:
    - name: suyash-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/web
      filters:
        - type: URLRewrite
          URLRewrite:
            path:
              type: ReplacePrefixMatch
              ReplacePrefixMatch: /web
      backendRefs:
        - name: ghee-service
          port: 5656
