ingress.yaml
apiVersion : networking.k8s.io/v1
kind: Ingress 
metadata:
  name: suyash-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "False"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "True"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /nginx(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: suyash-service
              port:
                number: 81
